--- a/app/views/equipment/new.html.erb
+++ b/app/views/equipment/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Create a new Portfolio Item</h1>
+<h1>Add a new equipment</h1>
 <%= form_for(@labor_item) do |form| %>
 
     <div class="field">
@@ -8,7 +8,18 @@
 
     <div class="field">
       <%= form.label :inv_nr %>
-      <%= form.text_area :inv_nr %>
+      <%= form.number_field :inv_nr %>
+    </div>
+
+    <div class="field">
+      <%= form.label :quantity %>
+      <%= form.number_field :quantity %>
+    </div>
+
+    <div class="field">
+      <%= form.label :category %>
+      <%= form.collection_select :category_id, Category.all,:id,:name, include_blank: true %>
+
     </div>
 
     <div class="field">
