--- a/app/views/equipment/new.html.erb
+++ b/app/views/equipment/new.html.erb
@@ -8,7 +8,7 @@
 
     <div class="field">
       <%= form.label :inv_nr %>
-      <%= form.number_field :inv_nr %>
+      <%= form.text_field :inv_nr %>
     </div>
 
     <div class="field">
