--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -4,7 +4,7 @@
 <%= image_tag @labor_item.main_image %>
 
 <h1><%= @labor_item.name %></h1>
-<p><%= @labor_item.status.name %></p>
+<p><%= @labor_item.equipment_status.name %></p>
 <em><%= @labor_item.description %></em>
 
 
