--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,3 +1,5 @@
+<p>Hi, <%= current_user.first_name if current_user %> <p>
+
 <div class="collapse bg-inverse" id="navbarHeader">
   <div class="container">
     <div class="row">
