added guest user

--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,4 +1,4 @@
-<p>Hi, <%= current_user.first_name if current_user %> <p>
+<p>Hi, <%= current_user.first_name %> <p>
 
 <div class="collapse bg-inverse" id="navbarHeader">
   <div class="container">
