--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,17 +9,27 @@
   </head>
 
   <body>
-       <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
-       <% if current_user.is_a?(User) %>
-        <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-      <% else %>
-        <%= link_to "Register", new_user_registration_path %>
-        <%= link_to "Login", new_user_session_path %>
-      <% end %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    <div>
+      <div><%= link_to "Home", root_path %></div>
+      <div><%= link_to "About", about_path %></div>
+      <div><%= link_to "Contact", contact_path %></div>
+      <div><%= link_to "Equipment", equipment_index_path %></div>
+
+    </div>
+
+    <% if current_user.is_a?(User) %>
+      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to "Register", new_user_registration_path %>
+      <%= link_to "Login", new_user_session_path %>
+    <% end %>
+
     <%= yield %>
+
     <% if session[:source] %>
-    <p> Thanks for visiting Mylab from <%= session[:source] %> </p>
+      <p> Thanks for visiting Mylab from <%= session[:source] %> </p>
     <% end %>
   </body>
 </html>
