--- a/app/views/layouts/project.html.erb
+++ b/app/views/layouts/project.html.erb
@@ -19,13 +19,8 @@
     <% end %>
 
     <%= yield %>
-    <div>
-      <div><%= link_to "Home", root_path %></div>
-      <div><%= link_to "About", about_path %></div>
-      <div><%= link_to "Contact", contact_path %></div>
-      <div><%= link_to "Equipment", equipment_index_path %></div>
+    <%= render "shared/nav" %>
 
-    </div>
     <% if session[:source] %>
       <p> Thanks for visiting Mylab from <%= session[:source] %> </p>
     <% end %>
