--- a/app/views/equipment/edit.html.erb
+++ b/app/views/equipment/edit.html.erb
@@ -1,33 +1,2 @@
 <h1>Edit a equipment</h1>
-<%= form_for(@labor_item) do |form| %>
-
-    <div class="field">
-      <%= form.label :name %>
-      <%= form.text_field :name %>
-    </div>
-
-    <div class="field">
-      <%= form.label :inv_nr %>
-      <%= form.text_field :inv_nr %>
-    </div>
-
-    <div class="field">
-      <%= form.label :quantity %>
-      <%= form.number_field :quantity %>
-    </div>
-
-    <div class="field">
-      <%= form.label :category %>
-      <%= form.collection_select :category_id, Category.all,:id,:name, include_blank: true %>
-
-    </div>
-
-    <div class="field">
-      <%= form.label :description %>
-      <%= form.text_area :description %>
-    </div>
-
-    <div class="actions">
-      <%= form.submit %>
-    </div>
-<% end %>
+<%= render "form", labor_item: @labor_item %>
