--- a/app/views/layouts/equipment.html.erb
+++ b/app/views/layouts/equipment.html.erb
@@ -19,7 +19,7 @@
     <% end %>
 
     <%= yield %>
-    <%= render "shared/nav" %>
+    <%= render "shared/nav", location: 'top' %>
 
     <% if session[:source] %>
       <p> Thanks for visiting Mylab from <%= session[:source] %> </p>
