--- a/app/views/equipment/measure.html.erb
+++ b/app/views/equipment/measure.html.erb
@@ -1,1 +1,7 @@
-<h1>Messuring Equipment</h1><%= link_to "Add New Equipment", new_equipment_path %><% @labor_items.each do |labor_item| %>  <p><%= link_to labor_item.name, equipment_show_path(labor_item)  %></p>  <p><%= labor_item.inv_nr %></p>  <p><%= labor_item.equipment_status.name %></p>  <p><%= labor_item.description %></p>  <%= image_tag labor_item.thumb_image unless labor_item.thumb_image.nil? %>  <%= link_to "Edit", edit_equipment_path(labor_item) %>  <%= link_to "Remove Item", equipment_path(labor_item), method: :delete, data: { confirm: 'Are you sure?' } %><% end %>
+<h1>Messuring Equipment</h1>
+
+<%= link_to "Add New Equipment", new_equipment_path %>
+
+<%= render partial: 'labor_item', collection: @labor_items %>
+
+
