--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,1 +1,6 @@
-<h1>All Projects</h1><%= link_to "Add New Project", new_project_path %><% @projects.each do |project| %>  <p><%= link_to project.name, project_show_path(project)  %></p>  <p><%= project.description %></p>  <%= image_tag project.thumb_image unless project.thumb_image.nil? %>  <%= link_to "Edit", edit_project_path(project) %>  <%= link_to "Remove Item", project_path(project), method: :delete, data: { confirm: 'Are you sure?' } %><% end %>
+<h1>All Projects</h1>
+
+<%= link_to "Add New Project", new_project_path %>
+
+<%= render @projects %>
+
