--- a/app/views/equipment/_labor_item.html.erb
+++ b/app/views/equipment/_labor_item.html.erb
@@ -1,3 +1,4 @@
+  <%= link_to "Add New Equipment", new_equipment_path if logged_in?(:labor_staff) %>
   <p><%= link_to labor_item.name, equipment_show_path(labor_item)  %></p>
   <p><%= labor_item.inv_nr %></p>
   <p><%= labor_item.category.name %></p>
@@ -5,5 +6,5 @@
   <p>Added <%= distance_of_time_in_words(labor_item.created_at, Time.now) %></p>
   <p><%= labor_item.description %></p>
   <%= image_tag labor_item.thumb_image unless labor_item.thumb_image.nil? %>
-  <%= link_to "Edit", edit_equipment_path(labor_item) %>
+  <%= link_to "Edit", edit_equipment_path(labor_item) if logged_in?(:labor_staff) %>
   <%= link_to "Remove Item", equipment_path(labor_item), method: :delete, data: { confirm: 'Are you sure?' } %>
