--- a/app/views/equipment/video.html.erb
+++ b/app/views/equipment/video.html.erb
@@ -1,6 +1,6 @@
 <h1>Video Equipment</h1>
 
-<%= link_to "Add New Equipment", new_equipment_path %>
+<%= link_to "Add New Equipment", new_equipment_path if logged_in?(:labor_staff) %>
 
 <%= render partial: 'labor_item', collection: @labor_items %>
 
