--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,6 @@
 <h1>All Projects</h1>
 
-<%= link_to "Add New Project", new_project_path %>
+<%= link_to "Add New Project", new_project_path if logged_in?(:labor_staff)  %>
 
 <%= render @projects %>
 
