fixed migration problems

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,5 +2,5 @@
 
 <%= link_to "Add New Booking", new_booking_path if logged_in?(:labor_staff)  %>
 
-<%= render @projects %>
+<%= render @bookings %>
 
