--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -38,7 +38,7 @@
             </div>
 
             <div class="form-group">
-              <%= f.submit "Update", class: "btn btn-primary"  %>
+              <%= f.submit "Update", class: "btn btn-primary btn-block"  %>
             </div>
           <% end %>
       </div>
