fixed bug with login helper method by setting default

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -224,3 +224,17 @@ body {
 .register-text {
   text-align: right;
 }
+
+.login > .card {
+  width: 22rem;
+  margin: 0 auto;
+  float: none;
+}
+
+.regist > .card {
+  width: 48rem;
+  margin: 0 auto;
+  float: none;
+}
+
+
