--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -7,6 +7,8 @@
         <%= link_to "Contact", contact_path, class: 'nav-link' %>
         <%= link_to "Equipment", equipment_index_path, class: 'nav-link' %>
         <%= link_to "Projects", projects_path, class: 'nav-link' %>
+        <%= login_helper 'nav-link'  %>
+
         </nav>
     </nav>
  
