--- a/app/views/bookings/_booking.html.erb
+++ b/app/views/bookings/_booking.html.erb
@@ -1,3 +1,3 @@
-  <p><%= link_to booking.UUID, booking_show_path(booking)  %></p>
+  <p><%= link_to booking.uuid, booking_path(booking)  %></p>
   <%= link_to "Edit", edit_booking_path(booking) %>
   <%= link_to "Remove Item", booking_path(booking), method: :delete, data: { confirm: 'Are you sure?' } %>
