--- a/app/views/equipment/_labor_item_row.html.erb
+++ b/app/views/equipment/_labor_item_row.html.erb
@@ -1,11 +1,12 @@
- 
 <div class="well">
+
   <div class="row">
     <div class="col-xs-8">
         <h4><%= labor_item.name %></small></h4>
     </div>
     <div class="col-xs-4">
-      <%= form_for @booking_item, remote: true do |f| %>
+
+      <%= form_for booking_item, remote: true do |f| %>
         <div class="input-group">
           <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
           <div class="input-group-btn">
@@ -15,6 +16,6 @@
         </div>
       <% end %>
     </div>
+
   </div>
 </div>
-  
