--- a/app/views/list/_list_row.html.erb
+++ b/app/views/list/_list_row.html.erb
@@ -1,18 +1,25 @@
 <div class="well">
 
   <div class="row">
-    <div class="col-xs-8">
-      <h4><%= labor_item.name %></h4>
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-4">
+          <%= image_tag labor_item.thumb_image, size: "210x140" %>
+        </div>
+        <div class="col-md-4">
+          <%= labor_item.name %>
+        </div>
+      </div>
+      <br>
     </div>
-    <div class="col-xs-4">
-
-      <%= form_for(@booking_item), remote: true do |f| %>
+    <div class="col-md-6">
+      <%= form_with(model: @booking_item) do |f| %>
         <div class="row">
-          <div class="col-xs-4">
+          <div class="col-md-3">
             <%= f.number_field :quantity, value: booking_item.quantity.to_i, class: "form-control", min: 1 %>
             <%= f.hidden_field :equipment_id, value: labor_item.id %>
           </div>
-          <div class="col-xs-8 text-right">
+          <div class="col-md-3">
             <div class="btn-group">
               <%= f.submit "Update Quantity", class: "btn btn-primary" %>
               <%= link_to "Delete", booking_item, { data: { confirm: "Are you sure you wish to delete the equipment '#{booking_item.equipment.name}' from your cart?" }, method: :delete, remote: true, class: "btn btn-danger" } %>
@@ -21,6 +28,5 @@
         </div>
       <% end %>
     </div>
-
   </div>
 </div
