--- a/app/views/layouts/_list_text.html.erb
+++ b/app/views/layouts/_list_text.html.erb
@@ -1,1 +1,2 @@
-<%= link_to "Items in Equipment List", list_show_path, class: "btn btn-link" %>
+<h3 class="listtext">Items in Equipment List </h3>
+<hr>
