--- a/app/views/page/contact.html.erb
+++ b/app/views/page/contact.html.erb
@@ -1,7 +1,9 @@
-<h1>Contact</h1>
+<h1 class="about">Contact</h1>
 <hr>
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-2">
+    </div>
+    <div class="col-md-4">
         <h3>Address</h3>
         <p>Finkenau 35, 22081 Hamburg</p>
         <h3>Phone</h3>
@@ -9,8 +11,8 @@
         <h3>Email</h3>
         <p>example@mylab.com</p>
     </div>
-    <div class="col-md-6">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2369.378019179828!2d10.031367215615703!3d53.5688697657214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b18ec9b32a6b19%3A0x36d5137d53bf255e!2sFinkenau+35%2C+22081+Hamburg!5e0!3m2!1sen!2sde!4v1498017472804" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <div class="col-md-4">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2369.378019179828!2d10.031367215615703!3d53.5688697657214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b18ec9b32a6b19%3A0x36d5137d53bf255e!2sFinkenau+35%2C+22081+Hamburg!5e0!3m2!1sen!2sde!4v1498017472804" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 </div>
 
