--- a/app/views/equipment/_labor_item.html.erb
+++ b/app/views/equipment/_labor_item.html.erb
@@ -1,20 +1,20 @@
- 
-<div class="well">
-  <div class="row">
-    <div class="col-xs-8">
-        <h4><%= labor_item.name %></small></h4>
-    </div>
-    <div class="col-xs-4">
-      <%= form_for @booking_item, remote: true do |f| %>
-        <div class="input-group">
-          <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
-          <div class="input-group-btn">
-            <%= f.hidden_field :labor_item_id, value: labor_item.id %>
-            <%= f.submit "Add to List", class: "btn btn-primary" %>
-          </div>
+
+<div class="home-card">
+  <%= image_tag labor_item.thumb_image unless labor_item.thumb_image.nil? %>
+  <p class="home-card-text"><%= link_to labor_item.name, equipment_show_path(labor_item)  %></p>
+  <p class="home-card-text"><%= labor_item.description %></p>
+  <% if logged_in?(:labor_staff) %> 
+    <button class="btn btn-default"><%= link_to "Edit", edit_equipment_path(labor_item) %></button>
+    <button class="btn btn-danger"><%= link_to "Delete", equipment_path(labor_item), method: :delete, data: { confirm: 'Are you sure?' } %></button>
+  <% else %>
+    <%= form_for @booking_item, remote: true do |f| %>
+      <div class="input-group">
+        <%= f.number_field :quantity, class: "form-control col-md-3", value: 1, min: 1 %>
+        <div class="input-group-btn">
+          <%= f.hidden_field :labor_item_id, value: labor_item.id if logged_in?(:user) %>
+          <%= f.submit "Add to List", class: "btn btn-primary" if logged_in?(:user) %>
         </div>
-      <% end %>
-    </div>
-  </div>
+      </div>
+    <% end %> 
+  <% end %>
 </div>
-  
