--- a/app/views/equipment/_labor_item_row.html.erb
+++ b/app/views/equipment/_labor_item_row.html.erb
@@ -1,10 +1,10 @@
 <div class="well">
 
   <div class="row">
-    <div class="col-xs-8">
+    <div class="col-md-6">
         <h4><%= labor_item.name %></small></h4>
     </div>
-    <div class="col-xs-4">
+    <div class="col-md-6">
 
       <%= form_for booking_item, remote: true do |f| %>
         <div class="input-group">
