--- a/app/views/equipment/computer.html.erb
+++ b/app/views/equipment/computer.html.erb
@@ -18,10 +18,10 @@
           <a class="nav-link" href="/equipment">All Equipment</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/measuring-equipment">Measuring <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/measuring-equipment">Measuring</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/electric-equipment">Electronics</a>
+          <a class="nav-link" href="/electric-equipment">Electronics </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/audio-equipment">Audio</a>
@@ -30,7 +30,7 @@
           <a class="nav-link" href="/video-equipment">Video</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/computer-equipment">Computer</a>
+          <a class="nav-link active" href="/computer-equipment">Computer <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/misc-equipment">Miscellaneous</a>
