--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -1,2 +1,5 @@
-<h1>About</h1>
-<p>My favorite laboratory where I can find the equipments I need for my projects.</p>
+
+<div class="container about">
+    <h1 class="jumbotron-heading">About</h1>
+    <p class="lead text-muted">My favorite laboratory where I can find the equipments I need for my projects.</p>
+</div>
