--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,6 +1,6 @@
 
       <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
-        <h3 class="navbar-brand">MyLab</h3>
+        <h4 class="mylab"><%= link_to "MyLab", root_path %></h4>
         <nav class="nav nav-masthead">
         <%= link_to "Home", root_path, class: 'nav-link' %>
         <%= link_to "About", about_path, class: 'nav-link' %>
@@ -9,7 +9,9 @@
         <%= link_to "Projects", projects_path, class: 'nav-link' %>
         <%= link_to "My List", list_show_path, class: 'nav-link'%>
         <%= login_helper 'nav-link'  %>
-
+        <form class="nav-link">
+          <input class="form-control mr-sm-2" type="text" placeholder="🔍">
+        </form>
         </nav>
     </nav>
  
