changed project layout

--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -51,7 +51,7 @@
             </div>
           <% end %> 
         </div>
-        <!--<%= @count %>-->
+        <!--<%= @count %>--> //To-do: implement most favorite items
       </div>
     </div>
   </body>
