--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,5 @@
-<h1>All Projects</h1>
+<h3 class="listtext">All Projects</h3>
 
 <%= link_to "Add New Project", new_project_path if logged_in?(:labor_staff)  %>
 
 <%= render @projects %>
-
