--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>Edit a Booking</h1>
-<%= render "form", booking: @booking %>
+
+<div class="regist">
+  <div class="card">
+    <div class="card-block">
+        <h3 class="card-title">Edit Booking Details </h3>
+        <%= render "form", booking: @booking %>
+    </div>
+  </div>
+</div> 
