--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Add a new booking</h1>
-<%= render "form", booking: @booking %>
+
+
+<div class="regist">
+  <div class="card">
+    <div class="card-block">
+        <h3 class="card-title">Add a new Booking </h3>
+        <%= render "form", booking: @booking %>
+    </div>
+  </div>
+</div> 
