--- a/app/views/list/_list_row.html.erb
+++ b/app/views/list/_list_row.html.erb
@@ -3,10 +3,10 @@
   <div class="row">
     <div class="col-md-6">
       <div class="row">
-        <div class="col-md-4">
-          <%= image_tag labor_item.thumb_image, size: "210x140" %>
+        <div>
+          <%= image_tag labor_item.thumb_image, size: "210x140", class: "item-img" %>
         </div>
-        <div class="col-md-4">
+        <div class="item-img" >
           <%= labor_item.name %>
         </div>
       </div>
@@ -22,11 +22,14 @@
           <div class="col-md-3">
             <div class="btn-group">
               <%= f.submit "Update Quantity", class: "btn btn-primary" %>
-              <%= link_to "Remove", booking_item, { data: { confirm: "Are you sure you wish to delete the equipment '#{booking_item.equipment.name}' from your cart?" }, method: :delete, remote: true, class: "btn btn-danger" } %>
+              <%= link_to "Remove", booking_item, { data: { confirm: "Are you sure you wish to delete the equipment '#{booking_item.equipment.name}' from your cart?" }, method: :delete, class: "btn btn-danger" } %>
+              <%= link_to "To Booking", edit_booking_path(current_booking), class: "btn btn-success" %>
+
             </div>
           </div>
         </div>
       <% end %>
     </div>
   </div>
+
 </div
