--- a/app/views/booking_items/destroy.html.erb
+++ b/app/views/booking_items/destroy.html.erb
@@ -1,2 +1,2 @@
-<h1>BookingItems#destroy</h1>
-<p>Find me in app/views/booking_items/destroy.html.erb</p>
+<p class="listtext">Item was removed from list</p>
+<%= link_to "Back", mylist_path %>
