--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,28 +1,37 @@
+      
 <%= form_for(@booking) do |form| %>
-
-    <div class="field">
-      <%= form.label :project %>
-      <%= form.collection_select :project_id, Project.all,:id,:name, include_blank: true %>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= form.label :project %>
+        <%= form.collection_select :project_id, Project.all,:id,:name, include_blank: true, class: "form-control"   %>
+      </div>
+      <div class="form-group">
+        <%= form.label :status if logged_in?(:labor_staff) %>
+        <%= form.collection_select :booking_status_id, BookingStatus.all,:id,:name, include_blank: true, class: "form-control"  if logged_in?(:labor_staff) %>
+      </div>
+      <div class="form-group">
+        <%= form.label :message %>
+        <%= form.text_area :message, autocomplete: "off", class: "form-control"  %>
+      </div>
     </div>
-    <div class="field">
-      <%= form.label :status %>
-      <%= form.collection_select :booking_status_id, BookingStatus.all,:id,:name, include_blank: true %>
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= form.label :pickup_date %>
+        <%= form.date_select :pickup_date, class: "form-control"  %>
+      </div>
+      <div class="form-group">
+        <%= form.label :return_date %>
+        <%= form.date_select :return_date, class: "form-control"  %>
+      </div>
     </div>
-    <div class="field">
-      <%= form.label :pickup_date %>
-      <%= form.date_select :pickup_date %>
+    <div class="col-md-10"></div>
+      <div class="col-md-2">
+        <div class="form-group">
+          <%= form.submit "Submit", class: "btn btn-primary btn-block"   %>
+        </div>
+      </div>
     </div>
-    <div class="field">
-      <%= form.label :return_date %>
-      <%= form.date_select :return_date %>
-    </div>
-
-    <div class="field">
-      <%= form.label :message %>
-      <%= form.text_area :message %>
-    </div>
-
-    <div class="actions">
-      <%= form.submit %>
-    </div>
+  </div>
 <% end %>
+      
