--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,6 +1,3 @@
-<h1>All Bookings</h1>
-
-<%= link_to "Add New Booking", new_booking_path if logged_in?(:labor_staff)  %>
-
+<h3 class="listtext">All Bookings</h3>
 <%= render @bookings %>
 
