--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,11 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-
-    <%= render "shared/application_nav"%>
+    <% if logged_in?(:labor_staff) %>
+      <%= render "shared/admin_application_nav"%>
+    <% else%>
+      <%= render "shared/application_nav"%>
+    <% end %>
     <%= yield %>
     <% if session[:source] %>
       <p> Thanks for visiting Mylab from <%= session[:source] %> </p>
