--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,3 +1,3 @@
-<h3 class="listtext">All Bookings</h3>
-<%= render @bookings %>
+<h3 class="listtext">My Bookings</h3>
+<%= render @bookings, collection: @labor_items, collection: @booking_items %>
 
