--- a/app/views/layouts/equipment.html.erb
+++ b/app/views/layouts/equipment.html.erb
@@ -12,7 +12,11 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <%= render "shared/application_nav" %>
+    <% if logged_in?(:labor_staff) %>
+      <%= render "shared/admin_application_nav"%>
+    <% else%>
+      <%= render "shared/application_nav"%>
+    <% end %>
 
     <%= login_helper %>
     <%= yield %>
