--- a/app/views/list/_list_row.html.erb
+++ b/app/views/list/_list_row.html.erb
@@ -22,7 +22,7 @@
           <div class="col-md-3">
             <div class="btn-group">
               <%= f.submit "Update Quantity", class: "btn btn-primary" %>
-              <%= link_to "Remove", booking_item, { data: { confirm: "Are you sure you wish to delete the equipment '#{booking_item.equipment.name}' from your cart?" }, method: :delete, class: "btn btn-danger" } %>
+              <%= link_to "Remove", booking_item, { data: { confirm: "Are you sure you wish to delete the equipment '#{booking_item.equipment.name}' from your list" }, method: :delete, class: "btn btn-danger" } %>
               <%= link_to "To Booking", edit_booking_path(current_booking), class: "btn btn-success" %>
 
             </div>
