--- a/app/views/shared/_admin_application_nav.html.erb
+++ b/app/views/shared/_admin_application_nav.html.erb
@@ -7,9 +7,8 @@
         <%= link_to "Contact", contact_path, class: 'nav-link' %>
         <%= link_to "Equipment", equipment_index_path, class: 'nav-link' %>
         <%= link_to "Projects", projects_path, class: 'nav-link' %>
-        <%= link_to "My List", mylist_path, class: 'nav-link'%>
-        <%= link_to "Booking", bookings_path, class: 'nav-link' if logged_in?(:user) %>
-        <%= link_to "Booking", indexadmin_bookings_path, class: 'nav-link' if logged_in?(:labor_staff) %>
+        <%= link_to "Booking", indexadmin_bookings_path, class: 'nav-link' %>
+        <%= link_to "Admin Board", admin_board_path, class: 'nav-link'%>
         <%= login_helper 'nav-link'  %>
         <form class="nav-link">
           <input class="form-control mr-sm-2" type="text" placeholder="🔍">
