--- a/app/views/bookings/_booking.html.erb
+++ b/app/views/bookings/_booking.html.erb
@@ -1,24 +1,22 @@
-<% @bookings.each do |booking| %>  
-  <div class="well">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="item-img" >
-          <%=  link_to booking.uuid, booking_path(booking) %>
-        </div>
-        <br>
+<div class="well">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="item-img" >
+        <%=  link_to booking.uuid, booking_path(booking) %> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <%= booking.booking_status.name %>
       </div>
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-3">
-          </div>
-          <div class="col-md-3">
-            <div class="btn-group">
-              <%= link_to "Remove", booking_path(booking), class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
-              <%= link_to "Edit", edit_booking_path(booking), class: "btn btn-info" %>
-            </div>
+      <br>
+    </div>
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-3">
+        </div>
+        <div class="col-md-3">
+          <div class="btn-group">
+            <%= link_to "Remove", booking_path(booking), class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
+            <%= link_to "Edit", edit_booking_path(booking), class: "btn btn-info" %>
           </div>
         </div>
       </div>
     </div>
   </div>
-<% end %>
+</div>
