fixed double booking in menu

--- a/app/views/bookings/_booking.html.erb
+++ b/app/views/bookings/_booking.html.erb
@@ -1,5 +1,5 @@
-<div class="well">
-  <div class="row">
+<div class="panel panel-default">
+  <div class="row panel-body">
     <div class="col-md-6">
       <div class="item-img" >
         <%=  link_to booking.uuid, booking_path(booking) %> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <%= booking.booking_status.name %>
@@ -20,3 +20,4 @@
     </div>
   </div>
 </div>
+
