--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -4,6 +4,7 @@
 @import "bootstrap";
 @import "jquery-ui";
 
+
 /*--------------Tasks Widget--------------*/
 
 .task-content {
@@ -15,11 +16,999 @@
   text-align: left;
   box-shadow: 0px 3px 2px #aab2bd;
   margin: 5px;
+
+}
+.panel-body {
+  padding: 15px;
 }
 
 .tasks-widget .task-content:after {
   clear: both;
 }
+
+/* Import fonts */
+/* @import url(http://fonts.googleapis.com/css?family=Ruda:400,700,900); */
+
+/* BASIC THEME CONFIGURATION */
+
+
+ul li {
+  list-style: none;
+}
+
+a, a:hover, a:focus {
+  text-decoration: none;
+  outline: none;
+}
+::selection {
+
+  background: #68dff0;
+  color: #fff;
+}
+::-moz-selection {
+  background: #68dff0;
+  color: #fff;
+}
+
+#container {
+  width: 100%;
+  height: 100%;
+}
+
+/* Bootstrap Modifications */
+.modal-header {
+  background: #68dff0;
+}
+
+.modal-title {
+  color: white;
+}
+
+.btn-round {
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+}
+
+.accordion-heading .accordion-toggle {
+  display: block;
+  cursor: pointer;
+  border-top: 1px solid #F5F5F5;
+  padding: 5px 0px;
+  line-height: 28.75px;
+  text-transform: uppercase;
+  color: #1a1a1a;
+  background-color: #ffffff;
+  outline: none !important;
+  text-decoration: none;
+}
+
+
+/*Helpers*/
+
+.centered {
+  text-align: center;
+}
+
+.goleft {
+  text-align: left;
+}
+
+.goright {
+  text-align: right;
+}
+
+.mt {
+  margin-top: 25px;
+}
+
+.mb {
+  margin-bottom: 25px;
+}
+
+.ml {
+  margin-left: 5px;
+}
+
+.no-padding {
+  padding: 0 !important;
+}
+
+.no-margin {
+  margin: 0 !important;
+}
+
+/*Exclusive Theme Colors Configuration*/
+
+.label-theme {
+  background-color: #68dff0;
+}
+
+.bg-theme {
+  background-color: #68dff0;
+}
+
+ul.top-menu > li > .logout {
+  color: #f2f2f2;
+  font-size: 12px;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border: 1px solid #64c3c2 !important;
+  padding: 5px 15px;
+  margin-right: 15px;
+  background: #68dff0;
+  margin-top: 15px;
+}
+
+
+/*sidebar navigation*/
+
+#sidebar {
+  width: 210px;
+  height: 100%;
+  position: fixed;
+  background: #424a5d;
+}
+
+#sidebar h5 {
+  color: #f2f2f2;
+  font-weight: 700;
+}
+
+#sidebar ul li {
+  position: relative;
+}
+
+#sidebar .sub-menu > .sub li  {
+  padding-left: 32px;
+}
+
+#sidebar .sub-menu > .sub li:last-child {
+  padding-bottom: 10px;
+}
+
+
+.nav-collapse.collapse {
+  display: inline;
+}
+
+ul.sidebar-menu , ul.sidebar-menu li ul.sub{
+  margin: -2px 0 0;
+  padding: 0;
+}
+
+ul.sidebar-menu {
+  margin-top: 75px;
+}
+
+#sidebar > ul > li > ul.sub {
+  display: none;
+}
+
+#sidebar > ul > li.active > ul.sub, #sidebar > ul > li > ul.sub > li > a {
+  display: block;
+}
+
+ul.sidebar-menu li ul.sub li{
+  background: #424a5d;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+ul.sidebar-menu li ul.sub li:last-child{
+  border-radius: 0 0 4px 4px;
+  -webkit-border-radius: 0 0 4px 4px;
+}
+
+ul.sidebar-menu li ul.sub li a {
+  font-size: 12px;
+  padding: 6px 0;
+  line-height: 35px;
+  height: 35px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  color: #aeb2b7;
+}
+
+ul.sidebar-menu li ul.sub li a:hover {
+  color: white;
+  background: transparent;
+}
+
+ul.sidebar-menu li ul.sub li.active a {
+  color: #68dff0;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  display: block;
+}
+
+ul.sidebar-menu li{
+  /*line-height: 20px !important;*/
+  margin-bottom: 5px;
+  margin-left:10px;
+  margin-right:10px;
+}
+
+ul.sidebar-menu li.sub-menu{
+  line-height: 15px;
+}
+
+ul.sidebar-menu li a span{
+  display: inline-block;
+}
+
+ul.sidebar-menu li a{
+  color: #aeb2b7;
+  text-decoration: none;
+  display: block;
+  padding: 15px 0 15px 10px;
+  font-size: 12px;
+  outline: none;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+ul.sidebar-menu li a.active, ul.sidebar-menu li a:hover, ul.sidebar-menu li a:focus {
+  background: #68dff0;
+  color: #fff;
+  display: block;
+
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+
+ul.sidebar-menu li a i {
+  font-size: 15px;
+  padding-right: 6px;
+}
+
+ul.sidebar-menu li a:hover i, ul.sidebar-menu li a:focus i {
+  color: #fff;
+}
+
+ul.sidebar-menu li a.active i {
+  color: #fff;
+}
+
+
+.mail-info, .mail-info:hover {
+  margin: -3px 6px 0 0;
+  font-size: 11px;
+}
+
+/* MAIN CONTENT CONFIGURATION */
+#main-content {
+  margin-left: 210px;
+}
+
+.header, .footer {
+  min-height: 60px;
+  padding: 0 15px;
+}
+
+.header {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 1002;
+}
+
+.black-bg {
+  background: #ffd777;
+  border-bottom: 1px solid #c9aa5f;
+}
+
+.wrapper {
+  display: inline-block;
+  margin-top: 60px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 15px;
+  padding-top: 0px;
+  width: 100%;
+}
+
+/*--sidebar toggle---*/
+
+.sidebar-toggle-box {
+  float: left;
+  padding-right: 15px;
+  margin-top: 20px;
+}
+
+.sidebar-toggle-box .fa-bars {
+  cursor: pointer;
+  display: inline-block;
+  font-size: 20px;
+}
+
+
+.sidebar-closed > #sidebar > ul {
+  display: none;
+}
+
+.sidebar-closed #main-content {
+  margin-left: 0px;
+}
+
+.sidebar-closed #sidebar {
+  margin-left: -180px;
+}
+
+
+/* Dash Side */
+
+.ds {
+  background: #ffffff;
+  padding-top: 20px;
+}
+
+.ds h4 {
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.ds h3 {
+  color: #ffffff;
+  font-size: 16px;
+  padding: 0 10px;
+  line-height: 60px;
+  height: 60px;
+  margin: 0;
+  background: #ff865c;
+  text-align: center;
+}
+
+.ds i {
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.ds .desc {
+  border-bottom: 1px solid #eaeaea;
+  display: inline-block;
+  padding: 15px 0;
+  width: 100%;
+}
+
+.ds .desc:hover {
+  background: #f2f2f2;
+}
+
+.ds .thumb {
+  width: 30px;
+  margin: 0 10px 0 20px;
+  display: block;
+  float: left;
+}
+
+.ds .details {
+  width: 170px;
+  float: left;
+}
+
+.ds > .desc p {
+  font-size: 11px;
+}
+
+.ds p > muted {
+  font-size: 9px;
+  text-transform: uppercase;
+  font-style: italic;
+  color: #666666
+}
+
+.ds a {
+  color: #68dff0;
+}
+
+
+
+/* MAIN CHART CONFIGURATION */
+.main-chart {
+  padding-top: 20px;
+}
+
+.mleft {
+}
+
+.border-head h3 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 15px;
+  padding-bottom: 5px;
+  font-weight: normal;
+  font-size: 18px;
+  display: inline-block;
+  width: 100%;
+  font-weight: 700;
+  color: #989898;
+}
+
+.custom-bar-chart {
+  height: 290px;
+  margin-top: 20px;
+  margin-left: 20px;
+  position: relative;
+  border-bottom: 1px solid #c9cdd7;
+}
+
+.custom-bar-chart .bar {
+  height: 100%;
+  position: relative;
+  width: 6%;
+  margin: 0px 4%;
+  float: left;
+  text-align: center;
+  z-index: 10;
+}
+
+.custom-bar-chart .bar .title {
+  position: absolute;
+  bottom: -30px;
+  width: 100%;
+  text-align: center;
+  font-size: 11px;
+}
+
+.custom-bar-chart .bar .value {
+  position: absolute;
+  bottom: 0;
+  background: #ff865c;
+  color: #68dff0;
+  width: 100%;
+  -webkit-border-radius: 5px 5px 0 0;
+  -moz-border-radius: 5px 5px 0 0;
+  border-radius: 5px 5px 0 0;
+  -webkit-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  -ms-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+
+
+.custom-bar-chart .bar .value:hover {
+  background: #2f2f2f;
+  color: #fff;
+}
+
+.y-axis {
+  color: #555555;
+  position: absolute;
+  text-align: left;
+  width: 100%;
+  font-size: 11px;
+}
+
+.y-axis li {
+  border-top: 1px dashed #dbdce0;
+  display: block;
+  height: 58px;
+  width: 100%;
+}
+
+.y-axis li:last-child {
+  border-top: none;
+}
+
+.y-axis li span {
+  display: block;
+  margin: -10px 0 0 -60px;
+  padding: 0 10px;
+  width: 40px;
+}
+
+
+/*Donut Chart Main Page Conf*/
+.donut-main {
+  display: block;
+  text-align: center;
+}
+
+.donut-main h4 {
+  font-weight: 700;
+  font-size: 16px;
+}
+
+/* *************************************************************************************
+PANELS CONFIGURATIONS
+*************************************************************************************** */
+
+/*Panel Size*/
+
+.pn {
+  height: 250px;
+  box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.pn:hover {
+  box-shadow: 2px 3px 2px rgba(0, 0, 0, 0.3);
+
+}
+
+/* Specific Conf for Donut Charts*/
+.donut-chart p {
+  margin-top: 5px;
+  font-weight: 700;
+  margin-left: 15px;
+}
+.donut-chart h2 {
+  font-weight: 900;
+  color: #FF6B6B;
+  font-size: 38px;
+}
+
+/*Content Panel*/
+.content-panel {
+  background: #ffffff;
+  box-shadow: 0px 3px 2px #aab2bd;
+  padding-top: 15px;
+  padding-bottom: 5px;
+}
+.content-panel h4 {
+  margin-left: 10px;
+}
+
+
+/* Calendar Configuration */
+#calendar {
+  color: white;
+  padding: 0px !important;
+}
+.calendar-month-header {
+  background: #43b1a9;
+}
+
+/* TODO PANEL */
+.steps{
+  display: block;
+}
+.steps input[type=checkbox] {
+  display: none;
+}
+.steps input[type=submit]{
+  background: #f1783c;
+  border: none;
+  padding: 0px;
+  margin: 0 auto;
+  width: 100%;
+  height: 55px;
+  color: white;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 11px;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: background 0.5s ease
+}
+.steps input[type=submit]:hover{
+  background: #8fde9c;
+}
+.steps label{
+  background: #393D40;
+  height: 65px;
+  line-height: 65px;
+  width: 100%;
+  display: block;
+  border-bottom: 1px solid #44494e;
+  color: #889199;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 11px;
+  letter-spacing: 1px;
+  text-indent: 52px;
+  cursor: pointer;
+  transition: all 0.7s ease;
+  margin: 0px;
+}
+.steps label:before{
+  content:"";
+  width: 12px;
+  height: 12px;
+  display: block;
+  position: absolute;
+  margin: 26px 0px 0px 18px;
+  border-radius: 100%;
+  transition: border 0.7s ease
+}
+.steps label:hover{
+  background: #2B2E30;
+  color: #46b7e5
+}
+.steps label:hover:before{
+  border: 1px solid #46b7e5;
+}
+#op1:checked ~ label[for=op1]:before,
+#op2:checked ~ label[for=op2]:before,
+#op3:checked ~ label[for=op3]:before{
+  border: 2px solid #96c93c;
+  background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAHCAYAAAA1WQxeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAGFJREFUeNpinHLMhgEHKADia0xQThIQs6JJ9gPxZhYQAcS6QHwDiI8hSYJAC0gBPxDLAvFcIJ6JJJkDxFNBVtgBcQ8Qa6BLghgwN4A4a9ElQYAFSj8C4mwg3o8sCQIAAQYA78QTYqnPZuEAAAAASUVORK5CYII=') no-repeat center center;
+}
+
+.profile-01 p {
+  color: white;
+  padding-top: 15px;
+  font-weight: 400;
+  font-size: 15px;
+}
+
+
+/*spark line*/
+.chart {
+  display: inline-block;
+  text-align: center;
+  width: 100%;
+}
+.chart .heading {
+  text-align: left;
+}
+.chart .heading span {
+  display: block;
+}
+.panel.green-chart .chart-tittle {
+  font-size: 16px;
+  padding: 15px;
+  display: inline-block;
+  font-weight:normal;
+  background: #99c262;
+  width: 100%;
+  -webkit-border-radius: 0px 0px 4px 4px;
+  border-radius: 0px 0px 4px 4px;
+}
+#barchart {
+  margin-bottom: -15px;
+  display: inline-block;
+}
+.panel.green-chart .chart-tittle .value {
+  float: right;
+  color: #c0f080;
+}
+.panel.green-chart {
+  background: #a9d96c;
+  color: #fff;
+}
+.panel.terques-chart {
+  background: transparent;
+  color: #797979;
+}
+.panel.terques-chart .chart-tittle .value {
+  float: right;
+  color: #fff;
+}
+.panel.terques-chart .chart-tittle .value a {
+  color: #2f2f2f;
+  font-size: 12px;
+}
+.panel.terques-chart .chart-tittle .value a:hover, .panel.terques-chart .chart-tittle .value a.active {
+  color: #68dff0;
+  font-size: 12px;
+}
+.panel.terques-chart .chart-tittle {
+  font-size: 16px;
+  padding: 15px;
+  display: inline-block;
+  font-weight:normal;
+  background: #39b7ac;
+  width: 100%;
+  -webkit-border-radius: 0px 0px 4px 4px;
+  border-radius: 0px 0px 4px 4px;
+}
+.inline-block {
+  display: inline-block;
+}
+
+/* showcase background */
+.showback {
+  background: #ffffff;
+  padding: 15px;
+  margin-bottom: 15px;
+  box-shadow: 0px 3px 2px #aab2bd;
+}
+
+
+
+/* Calendar Events - Calendar.html*/
+.external-event {
+  cursor: move;
+  display: inline-block !important;
+  margin-bottom: 7px !important;
+  margin-right: 7px !important;
+  padding: 10px;
+}
+
+.drop-after {
+  padding-top: 15px;
+  margin-top: 15px;
+  border-top: 1px solid #ccc;
+}
+
+.fc-state-default, .fc-state-default .fc-button-inner {
+  background: #f2f2f2;
+}
+
+.fc-state-active .fc-button-inner {
+  background: #FFFFFF;
+}
+
+/* Gallery Configuration */
+.photo-wrapper {
+  display: block;
+  position: relative;
+  overflow: hidden;
+  background-color: #68dff0;
+  -webkit-transition: background-color 0.4s;
+  -moz-transition: background-color 0.4s;
+  -o-transition: background-color 0.4s;
+  transition: background-color 0.4s;
+}
+.project .overlay {
+  position: absolute;
+  text-align: center;
+  color: #fff;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 0.4s;
+  -moz-transition: opacity 0.4s;
+  -o-transition: opacity 0.4s;
+  transition: opacity 0.4s;
+
+}
+
+.project:hover .photo-wrapper {
+  background-color: #68dff0;
+  background-image:url(../img/zoom.png);
+  background-repeat:no-repeat;
+  background-position:center;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: relative;
+}
+.project:hover .photo {
+  opacity: 10;
+  filter: alpha(opacity=4000);
+  opacity: 0.1;
+  filter: alpha(opacity=40);
+}
+.project:hover .overlay {
+  opacity: 100;
+  filter: alpha(opacity=10000);
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+
+/*badge*/
+.badge.bg-primary {
+  background: #8075c4;
+}
+
+.badge.bg-success {
+  background: #a9d86e;
+}
+
+.badge.bg-warning {
+  background: #FCB322;
+}
+
+.badge.bg-important {
+  background: #ff6c60;
+}
+
+.badge.bg-info {
+  background: #41cac0;
+}
+
+.badge.bg-inverse {
+  background: #2A3542;
+}
+
+
+/*easy pie chart*/
+.easy-pie-chart {
+  display: inline-block;
+  padding: 30px 0;
+}
+
+.chart-info, .chart-info .increase, .chart-info .decrease {
+  display: inline-block;
+}
+
+.chart-info {
+  width: 100%;
+  margin-bottom:5px;
+}
+
+.chart-position {
+  margin-top: 70px;
+}
+
+.chart-info span {
+  margin: 0 3px;
+}
+
+.chart-info .increase {
+  background: #ff6c60;
+  width: 10px;
+  height: 10px;
+}
+
+.chart-info .decrease {
+  background: #f2f2f2;
+  width: 10px;
+  height: 10px;
+}
+
+.panel-footer.revenue-foot {
+  background-color: #e6e7ec;
+  -webkit-border-radius: 0px 0px 4px 4px;
+  border-radius: 0px 0px 4px 4px;
+  border: none;
+  padding: 0;
+  width: 100%;
+  display: inline-block;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  /* Safari and Chrome */
+  .panel-footer.revenue-foot {
+    margin-bottom: -4px;
+  };
+}
+
+
+.panel-footer.revenue-foot ul  {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  display: inline-flex;
+}
+
+.panel-footer.revenue-foot ul li {
+  float: left;
+  width: 33.33%;
+}
+
+.panel-footer.revenue-foot ul li.first a:hover, .panel-footer.revenue-foot ul li.first a {
+  -webkit-border-radius: 0px 0px 0px 4px;
+  border-radius: 0px 0px 0px 4px;
+}
+
+.panel-footer.revenue-foot ul li.last a:hover, .panel-footer.revenue-foot ul li.last a {
+  -webkit-border-radius: 0px 0px 4px 0px;
+  border-radius: 0px 0px 4px 0px;
+  border-right: none;
+
+}
+
+.panel-footer.revenue-foot ul li a{
+  display: inline-block;
+  width: 100%;
+  padding: 14px 15px;
+  text-align: center;
+  border-right: 1px solid #d5d8df;
+  color: #797979;
+}
+
+.panel-footer.revenue-foot ul li a:hover, .panel-footer.revenue-foot ul li.active a {
+  background: #fff;
+  position: relative;
+}
+
+.panel-footer.revenue-foot ul li a i {
+  color: #c6cad5;
+  display: block;
+  font-size: 16px;
+}
+.panel-footer.revenue-foot ul li a:hover i, .panel-footer.revenue-foot ul li.active a i {
+  color: #ff6c60;
+  display: block;
+  font-size: 16px;
+}
+
+
+/*flot chart*/
+.flot-chart .chart, .flot-chart .pie, .flot-chart .bars {
+  height: 300px;
+}
+
+/*todolist*/
+#sortable {
+  list-style-type: none;
+  margin: 0 0 20px 0;
+  padding: 0;
+  width: 100%;
+}
+#sortable li {
+  padding-left: 3em;
+  font-size: 12px;
+}
+#sortable li i {
+  position: absolute;
+  left:6px;
+  padding:4px 10px 0 10px;
+  cursor: pointer;
+}
+
+#sortable li input[type=checkbox]{
+  margin-top: 0;
+}
+
+.ui-sortable > li {
+  padding: 15px 0 15px 35px !important ;
+  position: relative;
+  background: #f5f6f8;
+  margin-bottom: 2px;
+  border-bottom   : none !important;
+}
+
+.ui-sortable li.list-primary {
+  border-left: 3px solid #41CAC0;
+}
+
+.ui-sortable li.list-success {
+  border-left: 3px solid #78CD51;
+}
+
+.ui-sortable li.list-danger {
+  border-left: 3px solid #FF6C60;
+}
+
+.ui-sortable li.list-warning {
+  border-left: 3px solid #F1C500;
+}
+
+.ui-sortable li.list-info {
+  border-left: 3px solid #58C9F3;
+}
+
+.ui-sortable li.list-inverse {
+  border-left: 3px solid #BEC3C7;
+}
+
+/*footer*/
+.site-footer {
+  background: #68dff0;
+  color: #fff;
+  padding: 10px 0;
+}
+
+
+.go-top {
+  margin-right: 1%;
+  float: right;
+  background: rgba(255,255,255,.5);
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+}
+
+.go-top i {
+  color: #2A3542;
+}
+
+.site-min-height {
+  min-height: 900px;
+}
+
+
 
 .tasks-widget .task-footer  {
   margin-top: 5px;
@@ -114,3 +1103,47 @@
   }
 
 }
+
+
+@media (max-width: 480px) {
+
+  .notify-row, .search, .dont-show , .inbox-head .sr-input, .inbox-head .sr-btn{
+    display: none;
+  }
+
+  #top_menu .nav > li, ul.top-menu > li {
+    float: right;
+  }
+  .hidden-phone {
+    display: none !important;
+  }
+
+  .chart-position {
+    margin-top: 0px;
+  }
+
+  .navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
+    background-color: #ccc;
+    border-color:#ccc ;
+  }
+
+}
+
+/* Styles responsive */
+
+/* Buttons */
+
+.btn-xs,
+.btn-group-xs > .btn {
+  padding: 1px 5px;
+  font-size: 12px;
+  line-height: 1.5;
+  border-radius: 3px;
+}
+
+/* Font awesome */
+.pull-right {
+  float: right;
+}
+
+
