--- a/app/views/list/_list_row.html.erb
+++ b/app/views/list/_list_row.html.erb
@@ -23,8 +23,6 @@
             <div class="btn-group">
               <%= f.submit "Update Quantity", class: "btn btn-primary" %>
               <%= link_to "Remove", booking_item, { data: { confirm: "Are you sure you wish to delete the equipment '#{booking_item.equipment.name}' from your list" }, method: :delete, class: "btn btn-danger" } %>
-              <%= link_to "To Booking", edit_booking_path(current_booking), class: "btn btn-success" %>
-
             </div>
           </div>
         </div>
@@ -32,4 +30,4 @@
     </div>
   </div>
 
-</div
+</div>
