improved booking style

--- a/app/views/bookings/indexadmin.html.erb
+++ b/app/views/bookings/indexadmin.html.erb
@@ -14,7 +14,7 @@
   <section class="wrapper">
     <h3>All Bookings</h3>
     <div class="row mt mb">
-      <div class="col-sm-2">
+      <div class="col-sm-2 no-padding">
         <section class="task-panel tasks-widget">
           <div class="panel-heading">
             <div class="pull-left"> Pending </div>
@@ -29,7 +29,7 @@
           </div>
         </section>
       </div><!--/col-sm-2 -->
-      <div class="col-sm-2">
+      <div class="col-sm-2 no-padding">
         <section class="task-panel tasks-widget">
           <div class="panel-heading">
             <div class="pull-left"> Confirmed </div>
@@ -44,7 +44,7 @@
           </div>
         </section>
       </div><!--/col-sm-2 -->
-      <div class="col-sm-2">
+      <div class="col-sm-2 no-padding">
         <section class="task-panel tasks-widget">
           <div class="panel-heading">
             <div class="pull-left"> Claimed </div>
@@ -59,7 +59,7 @@
           </div>
         </section>
       </div><!--/col-sm-2 -->
-      <div class="col-sm-2">
+      <div class="col-sm-2 no-padding">
         <section class="task-panel tasks-widget">
           <div class="panel-heading">
             <div class="pull-left"> Unclaimed </div>
@@ -74,7 +74,7 @@
           </div>
         </section>
       </div><!--/col-sm-2 -->
-      <div class="col-sm-2">
+      <div class="col-sm-2 no-padding">
         <section class="task-panel tasks-widget">
           <div class="panel-heading">
             <div class="pull-left"> Overdue </div>
@@ -89,7 +89,7 @@
           </div>
         </section>
       </div><!--/col-sm-2 -->
-      <div class="col-sm-2">
+      <div class="col-sm-2 no-padding">
         <section class="task-panel tasks-widget">
           <div class="panel-heading">
             <div class="pull-left"> Returned </div>
