--- a/app/views/list/_list_row.html.erb
+++ b/app/views/list/_list_row.html.erb
@@ -7,7 +7,7 @@
           <%= image_tag labor_item.thumb_image, size: "210x140", class: "item-img" %>
         </div>
         <div class="item-img" >
-          <%= labor_item.name + " - " + labor_item.inv_nr %>
+          <%= labor_item.name + " - " +(labor_item.inv_nr).to_s %>
         </div>
       </div>
       <br>
