--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,12 +10,10 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require bootstrap-datepicker
  */
 
 // Custom bootstrap variables must be set or imported *before* bootstrap.
-/*
- *= require jquery-ui/datepicker
- */
 @import "bootstrap";
 
 a,
