--- a/app/views/equipment/_equipment_view.html.erb
+++ b/app/views/equipment/_equipment_view.html.erb
@@ -5,20 +5,25 @@
 <%= link_to "Add New Equipment", new_equipment_path, class: "btn btn-secondary add-new" if logged_in?(:labor_staff) %>
 <div class="row equipment-container">
   <%= form_with(model: @booking) do |form| %>
-      <div class="input-group">
-        <div class="form-group pr">
+      <div class="row">
+        <div class="form-group col-md-2">
           <%= form.label :pickup_date %>
-          <%= form.date_select :pickup_date, class: "form-control"  %>
         </div>
-        <div class="form-group pr">
+        <div class="form-group col-md-3">
+          <%= form.text_field :pickup_date, class: "form-control", :data => {:provide => "datepicker"} %>
+        </div>
+        <div class="form-group col-md-2">
           <%= form.label :return_date %>
-          <%= form.date_select :return_date, class: "form-control"  %>
         </div>
-        <div class="form-group pr">
-          <%= button_to "Search", url_for(params), class: "btn btn-info" %>
+        <div class="form-group col-md-3">
+          <%= form.text_field :return_date, class: "form-control", :data => {:provide => "datepicker"} %>
+        </div>
+        <div class="form-group col-md-2">
+          <%= button_to "Search", "", class: "btn btn-info" %>
         </div>
       </div>
   <% end %>
+
 </div>
 
 <div class="row equipment-container">
