--- a/app/views/equipment/misc.html.erb
+++ b/app/views/equipment/misc.html.erb
@@ -37,6 +37,10 @@
            <span class="sr-only">(current)</span></a>
         </li>
       </ul>
+      <%= form_tag equipment_index_path, :method => 'get' do %>
+          <%= text_field_tag :search, params[:search], class: 'form-control mr-sm-2' %>
+          <%= submit_tag 'Search by name', :name => nil , class: 'form-control btn btn-info' %>
+      <% end %>
     </nav>
     <!-- End of side-bar -->
         <%= render 'equipment_view' %>
