added filter for availability

--- a/app/assets/stylesheets/equipment.scss
+++ b/app/assets/stylesheets/equipment.scss
@@ -18,6 +18,11 @@ body {
   min-height: 75rem; /* Can be removed; just added for demo purposes */
 }
 
+.inline-field {
+  margin-right: 5px;
+  margin-left: 2px;
+}
+
 .navbar {
   margin-bottom: 0;
 }
