--- a/app/views/equipment/el.html.erb
+++ b/app/views/equipment/el.html.erb
@@ -36,7 +36,7 @@
           <a class="nav-link" href="/misc-equipment">Miscellaneous</a>
         </li>
       </ul>
-      <%= form_tag equipment_index_path, :method => 'get' do %>
+      <%= form_tag electric_equipment_path, :method => 'get' do %>
           <%= text_field_tag :search, params[:search], class: 'form-control mr-sm-2' %>
           <%= submit_tag 'Search by name', :name => nil , class: 'form-control btn btn-info' %>
       <% end %>
